rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: online-shop

spec:
  replicas: 3

  strategy:
    blueGreen:
      activeService: shop-active
      previewService: shop-preview
      autoPromotionEnabled: true
      scaleDownDelaySeconds: 60

  selector:
    matchLabels:
      app: online-shop

  template:
    metadata:
      labels:
        app: online-shop

    spec:
      imagePullSecrets:
        - name: regcred

      containers:
      - name: shop
        image: 501673236830.dkr.ecr.us-west-2.amazonaws.com/demo-private/ui:4b62800c23194539a78e6d9c207c60c0be8447ca
        ports:
        - containerPort: 3000

        readinessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 5
          periodSeconds: 10
