service.yaml
# apiVersion: v1
# kind: Service
# metadata:
#   name: shop-active
# spec:
#   selector:
#     app: online-shop
#   ports:
#   - port: 80
#     targetPort: 3000

# --- 
# apiVersion: v1
# kind: Service
# metadata:
#   name: shop-preview
# spec:
#   selector:
#     app: online-shop
#   ports:
#   - port: 80
#     targetPort: 3000



apiVersion: v1
kind: Service
metadata:
  name: online-shop-service
spec:
  selector:
    app: online-shop
  ports:
  - port: 80
    targetPort: 3000
